--- a/index.html
+++ b/index.html
@@ -174,7 +174,22 @@
 </template>
 
 <script>
-  var fireballSize = 100;
+  var fireballSize = 22;
+  var getFireballSpeed = function(left) {
+    return left ? 5 : 2;
+  };
+
+  wizardSpeed = 3;
+  wizardWidth = 70;
+  getWizardHeight = function() {
+    return 1.337 * wizardWidth;
+  };
+  getWizardX = function(width) {
+    return width / 2 - wizardWidth / 2;
+  };
+  getWizardY = function(height) {
+    return height * 1 / 3 - getWizardHeight();
+  };
 </script>
 <script src="./js/game.js"></script>
 
