--- a/index.html
+++ b/index.html
@@ -174,20 +174,22 @@
 </template>
 
 <script>
+  'use strict';
+
   var fireballSize = 22;
   var getFireballSpeed = function(left) {
     return left ? 5 : 2;
   };
 
-  wizardSpeed = 3;
-  wizardWidth = 70;
-  getWizardHeight = function() {
+  var wizardSpeed = 3;
+  var wizardWidth = 70;
+  var getWizardHeight = function() {
     return 1.337 * wizardWidth;
   };
-  getWizardX = function(width) {
+  var getWizardX = function(width) {
     return width / 2 - wizardWidth / 2;
   };
-  getWizardY = function(height) {
+  var getWizardY = function(height) {
     return height * 1 / 3 - getWizardHeight();
   };
 </script>
