--- a/index.html
+++ b/index.html
@@ -193,7 +193,8 @@
     return height * 1 / 3 - getWizardHeight();
   };
 </script>
-<script src="./js/game.js"></script>
+<script src="js/stat.js"></script>
+<script src="js/game.js"></script>
 
 </body>
 </html>
