--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     </div>
 
     <div class="setup-footer">
-      <div class="setup-similar hidden">
+      <div class="setup-similar">
 
         <h4 class="setup-similar-title">Похожие персонажи</h4>
 
@@ -193,7 +193,12 @@
     return height * 1 / 3 - getWizardHeight();
   };
 </script>
-<script src="js/setup.js"></script>
+<script src="js/util.js"></script>
+<script src="js/parameters-wizard.js"></script>
+<script src="js/wizards-generation.js"></script>
+<script src="js/rendering-wizards.js"></script>
+<script src="js/setup-player.js"></script>
+<script src="js/dialog.js"></script>
 <script src="js/stat.js"></script>
 <script src="js/game.js"></script>
 
