--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     return height * 1 / 3 - getWizardHeight();
   };
 </script>
-<script src="js/util.js"></script>
+<script src="js/utils.js"></script>
 <script src="js/parameters-wizard.js"></script>
 <script src="js/wizards-generation.js"></script>
 <script src="js/rendering-wizards.js"></script>
