colorize-element.js created

--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
 <script src="js/parameters-wizard.js"></script>
 <script src="js/wizards-generation.js"></script>
 <script src="js/rendering-wizards.js"></script>
+<script src="js/colorize-element.js"></script>
 <script src="js/setup-player.js"></script>
 <script src="js/dialog.js"></script>
 <script src="js/stat.js"></script>
