--- a/index.html
+++ b/index.html
@@ -193,9 +193,9 @@
     return height * 1 / 3 - getWizardHeight();
   };
 </script>
+<script src="js/backend.js"></script>
 <script src="js/utils.js"></script>
 <script src="js/parameters-wizard.js"></script>
-<script src="js/wizards-generation.js"></script>
 <script src="js/rendering-wizards.js"></script>
 <script src="js/colorize-element.js"></script>
 <script src="js/setup-player.js"></script>
