--- a/index.html
+++ b/index.html
@@ -195,9 +195,10 @@
 </script>
 <script src="js/backend.js"></script>
 <script src="js/utils.js"></script>
-<script src="js/parameters-wizard.js"></script>
-<script src="js/rendering-wizards.js"></script>
+<script src="js/debounce.js"></script>
+<script src="js/render.js"></script>
 <script src="js/colorize-element.js"></script>
+<script src="js/wizard.js"></script>
 <script src="js/setup-player.js"></script>
 <script src="js/dialog.js"></script>
 <script src="js/stat.js"></script>
