--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
 <script src="js/colorize-element.js"></script>
 <script src="js/wizard.js"></script>
 <script src="js/setup-player.js"></script>
+<script src="js/avatar.js"></script>
 <script src="js/dialog.js"></script>
 <script src="js/stat.js"></script>
 <script src="js/game.js"></script>
