--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
 <script src="js/backend.js"></script>
 <script src="js/utils.js"></script>
 <script src="js/debounce.js"></script>
+<script src="js/popup.js"></script>
 <script src="js/render.js"></script>
 <script src="js/colorize-element.js"></script>
 <script src="js/wizard.js"></script>
